lib_LTLIBRARIES = libtlsrpt.la
libtlsrpt_la_SOURCES = json-escape-initializer-list.c  libtlsrpt.c
include_HEADERS = tlsrpt.h
man3_MANS = ../doc/manpages/tlsrpt_add_delivery_request_failure.3 \
            ../doc/manpages/tlsrpt_add_mx_host_pattern.3 \
            ../doc/manpages/tlsrpt_add_policy_string.3 \
            ../doc/manpages/tlsrpt_cancel_delivery_request.3 \
            ../doc/manpages/tlsrpt_close.3 \
            ../doc/manpages/tlsrpt_errno_from_error_code.3 \
            ../doc/manpages/tlsrpt_error_code_is_internal.3 \
            ../doc/manpages/tlsrpt_finish_delivery_request.3 \
            ../doc/manpages/tlsrpt_finish_policy.3 \
            ../doc/manpages/tlsrpt_get_socket.3 \
            ../doc/manpages/tlsrpt_init_delivery_request.3 \
            ../doc/manpages/tlsrpt_init_policy.3 \
            ../doc/manpages/tlsrpt_open.3 \
            ../doc/manpages/tlsrpt_set_blocking.3 \
            ../doc/manpages/tlsrpt_set_malloc_and_free.3 \
            ../doc/manpages/tlsrpt_set_nonblocking.3 \
            ../doc/manpages/tlsrpt_strerror.3
