lib_LTLIBRARIES = libtlsrpt.la
libtlsrpt_la_SOURCES = json-escape-initializer-list.c  libtlsrpt.c
include_HEADERS = tlsrpt.h
man3_MANS = man/tlsrpt_add_delivery_request_failure.3 \
            man/tlsrpt_add_mx_host_pattern.3 \
            man/tlsrpt_add_policy_string.3 \
            man/tlsrpt_cancel_delivery_request.3 \
            man/tlsrpt_close.3 \
            man/tlsrpt_errno_from_error_code.3 \
            man/tlsrpt_error_code_is_internal.3 \
            man/tlsrpt_finish_delivery_request.3 \
            man/tlsrpt_finish_policy.3 \
            man/tlsrpt_get_socket.3 \
            man/tlsrpt_init_delivery_request.3 \
            man/tlsrpt_init_policy.3 \
            man/tlsrpt_open.3 \
            man/tlsrpt_set_blocking.3 \
            man/tlsrpt_set_malloc_and_free.3 \
            man/tlsrpt_set_nonblocking.3 \
            man/tlsrpt_strerror.3
EXTRA_DIST = $(man3_MANS)
