AC_INIT([libtlsrpt], [0.5.0-rc2], [bl@sys4.de])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AM_PROG_AR
AC_PROG_RANLIB
LT_INIT
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([tlsrpt_version.h])

TLSRPT_VERSION_MAJOR=0
TLSRPT_VERSION_MINOR=5
TLSRPT_VERSION_PATCH=0
TLSRPT_VERSION_IS_PRERELEASE=1
TLSRPT_VERSION_PRERELEASE="rc2"

AC_SUBST(TLSRPT_VERSION_MAJOR)
AC_SUBST(TLSRPT_VERSION_MINOR)
AC_SUBST(TLSRPT_VERSION_PATCH)
AC_SUBST(TLSRPT_VERSION_IS_PRERELEASE)
AC_SUBST(TLSRPT_VERSION_PRERELEASE)

AC_OUTPUT
